# storm-frontend

./: .cproject  .gitignore  .project  AUTHORS  CHANGES  CREDITS  ChangeLog  Jenkinsfile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  bootstrap  clean.sh.in  compile_FE_fromScratch.sh  compile_from_scratch.sh  configure  configure.ac  configure.in  create_rpm.sh  frontend-setup.csh  frontend-setup.sh  globus_makefile_header  srmv2-storm-client.spec.in  srmv2-storm-server.spec.in  storm-frontend-debug.spec.in  storm-frontend-old.spec.in  storm-frontend.spec.in
db/: Makefile.am  README  instructions.txt  mysql_query.cpp  storm_mysql_config.sh  storm_mysql_grant.sql  storm_mysql_ifce.c  storm_mysql_ifce.cpp  storm_mysql_tbl.sql
etc/: .gitignore  Makefile.am  Makefile.in  storm-frontend-server.conf.template.in  storm-frontend.conf.in  storm-frontend.conf.template.in  storm-frontend.nsconfig
etc/cron.d/: Makefile.am  storm-frontend-server.cron.in  storm-frontend.cron.in
etc/init.d/: Makefile.am  Makefile.in  storm-frontend  storm-frontend-server.in  storm-frontend.in
etc/logrotate/: .gitignore  Makefile.am  Makefile.in  storm-frontend-server.in  storm-frontend.cron  storm-frontend.logrotate  storm-frontend.logrotate.in
etc/sysconfig/: Makefile.am  Makefile.in  storm-frontend-server
etc/systemd/: storm-frontend-server.service
m4/: acinclude.m4  argus.m4  boost.m4  cgsi-gsoap.m4  curl.m4  gsoap.m4  libuuid-devel.m4  mysql.m4  storm-xmlrpc-c.m4  voms.m4  wsdl2h.m4  xmlrpc-c.m4
src/: Makefile.am  Makefile.in
src/autogen/: config.h.in
src/db/: Makefile.am  Makefile.in  mysql_query.cpp  mysql_query.hpp  storm_Backend_DB_config.sh  storm_database_config.sh  storm_mysql.h  storm_mysql.hpp  storm_mysql_ifce.cpp  storm_mysql_tbl.sql
src/frontend/: .gitignore  AbortFilesRequest.cpp  AbortFilesRequest.hpp  AbortRequestRequest.cpp  AbortRequestRequest.hpp  ArgusException.hpp  Authorization.cpp  Authorization.hpp  AuthorizationException.hpp  BolRequest.cpp  BolRequest.hpp  BolStatusRequest.cpp  BolStatusRequest.hpp  BolSurl.hpp  BolTurl.hpp  Cgrp.h  ChangeSpaceForFilesRequest.cpp  ChangeSpaceForFilesRequest.hpp  CheckPermissionRequest.cpp  CheckPermissionRequest.hpp  Cnetdb.h  CopyRequest.cpp  CopyRequest.hpp  CopyStatusRequest.cpp  CopyStatusRequest.hpp  CopySurl.hpp  CopyTurl.hpp  Cpool_api.h  CredentialException.hpp  Credentials.cpp  Credentials.hpp  DBConnectionPool.cpp  DBConnectionPool.hpp  ExtendFileLifeTimeInSpaceRequest.cpp  ExtendFileLifeTimeInSpaceRequest.hpp  ExtendFileLifeTimeRequest.cpp  ExtendFileLifeTimeRequest.hpp  FileStatusRequest.hpp  FrontendConfiguration.cpp  FrontendConfiguration.hpp  (+179 more)
src/frontend/request/synch/: AbortFilesRequest.cpp  AbortFilesRequest.hpp  AbortRequestRequest.cpp  AbortRequestRequest.hpp  ChangeSpaceForFilesRequest.cpp  ChangeSpaceForFilesRequest.hpp  CheckPermissionRequest.cpp  CheckPermissionRequest.hpp  ExtendFileLifeTimeInSpaceRequest.cpp  ExtendFileLifeTimeInSpaceRequest.hpp  ExtendFileLifeTimeRequest.cpp  ExtendFileLifeTimeRequest.hpp  GetPermissionRequest.cpp  GetPermissionRequest.hpp  GetSpaceMetaDataRequest.cpp  GetSpaceMetaDataRequest.hpp  GetSpaceTokensRequest.cpp  GetSpaceTokensRequest.hpp  GetTransferProtocolsRequest.cpp  GetTransferProtocolsRequest.hpp  LsRequest.cpp  LsRequest.hpp  MkdirRequest.cpp  MkdirRequest.hpp  MvRequest.cpp  MvRequest.hpp  PingRequest.cpp  PingRequest.hpp  PurgeFromSpaceRequest.cpp  PurgeFromSpaceRequest.hpp  PutDoneRequest.cpp  PutDoneRequest.hpp  ReleaseFilesRequest.cpp  ReleaseFilesRequest.hpp  ReleaseSpaceRequest.cpp  ReleaseSpaceRequest.hpp  ReserveSpaceRequest.cpp  ReserveSpaceRequest.hpp  ResumeRequestRequest.cpp  ResumeRequestRequest.hpp  (+20 more)
srmv2/: Cglobals.h  Cinit.h  Cpwd.h  Cthread_api.h  Cthread_flags.h  FrontendOptions.cpp  FrontendOptions.hpp  Makefile.am  bol.hpp  copy.cpp  copy.hpp  copy_status.cpp  copy_status.hpp  file_request.cpp  get_status.cpp  osdep.h  ptg.cpp  ptg.hpp  ptp.cpp  ptp.hpp  put_status.hpp  sql_string.hpp  srm_server.h.in  srm_util.c  srmlogit.c  srmlogit.h  srmv2.c  srmv2.cpp  srmv2_GetRequestSummary.cpp  srmv2_GetRequestTokens.cpp  srmv2_copy.cpp  srmv2_filerequest_template.hpp  srmv2_init_script.in  srmv2_permreq.c  srmv2_ptg.cpp  srmv2_ptp.cpp  srmv2_spacereq.c  srmv2_status_get.cpp  srmv2_status_template.hpp  srmv2_xferreq.c  (+8 more)
test/: Makefile.am  client_Bol.c  client_Copy.c  client_GetTransferProtocols.c  client_Ls.c  client_Ping.c  client_PtG.c  client_PtP.c  client_status-PtG.c  client_status-PtP.c  client_status_Bol.c  client_status_Copy.cpp  srm2_testAbortFiles.c  srm2_testAbortRequest.c  srm2_testChangeFileStorageType.c  srm2_testCheckPermission.c  srm2_testCompactSpace.c  srm2_testCopy.c  srm2_testCopyRequestStatus.c  srm2_testExtendFileLifeTime.c  srm2_testGet.c  srm2_testGetRequestID.c  srm2_testGetRequestStatus.c  srm2_testGetRequestSummary.c  srm2_testGetSpaceMetaData.c  srm2_testGetSpaceToken.c  srm2_testLs.c  srm2_testMkdir.c  srm2_testMv.c  srm2_testPut.c  srm2_testPutDone.c  srm2_testPutRequestStatus.c  srm2_testReassignToUser.c  srm2_testReleaseFiles.c  srm2_testReleaseSpace.c  srm2_testRemoveFiles.c  srm2_testReserveSpace.c  srm2_testResumeRequest.c  srm2_testRm.c  srm2_testRmdir.c  (+6 more)
wsdl/: .gitignore  Makefile.am  Makefile.in
