
stormetcsysconfdir = $(sysconfdir)/sysconfig
dist_stormetcsysconf_DATA = storm-frontend.conf

logrotatedir = $(sysconfdir)/logrotate
dist_logrotate_DATA = ./logrotate/storm-frontend.cron ./logrotate/storm-frontend.logrotate

stormetcsysdir = $(sysconfdir)/init.d
dist_stormetcsys_DATA = ./init.d/storm-frontend

