
stormetcsysconfdir = $(sysconfdir)
dist_stormetcsysconf_DATA = storm-frontend.conf

crondir =  $(sysconfdir)/cron.d
dist_cron_DATA = ./cron.d/storm-frontend.cron

logrotatedir = $(sysconfdir)/logrotate
dist_logrotate_DATA = ./logrotate/storm-frontend.logrotate

stormetcsysdir = $(sysconfdir)/init.d
dist_stormetcsys_DATA = ./init.d/storm-frontend

